3.1.5
	Fix double free when using content filtering
3.1.4
	Add support for switching to a given group (Ralf S. Engelschall)
	Add substitutions for sendmail macro and strftime in URL checks
	Add custom logs of milter-greylist actions, see stat in greylist.conf
	Fixes for running with Postfix (Nerijus Baliunas)
	Fix configure problem with DNSRBL on Linux (Andrew McGill)
	Document how to use milter-greylist with Postfix (Nerijus Baliunas)
	Update .spec for Postfix (Nerijus Baliunas)
	Optionnaly post the message body to an URL check at DATA stage
	Integrate SPF, SMTP AUTH and STARTTLS in ACL
	Add msgsize and rcptcount clauses to ACL
	Allow rcpt clause at DATA stage ACL
	Fix crashes when running with -D on some systems (John Thiltges)
	Do not sort the databases, it makes startup slow and buys nothing
3.1.3
	Fix various bugs (regex searches, lists matches, uninitialized memory)
3.1.2
	Fix timespamp on sparc64 (Gert Doering)
	Add the ability to query extrnal sources in ACL using URL 
	Add connexion pools for URL queries to enable persistent connexions
	Fix dependency in rc-bsd.sh: it's mail, not sendmail
	Add DATA-stage ACL
	Update to .spec file (Rudy Eschauzier)
	Allow header and body searches in DATA-stage ACL
	Allow CIDR match for DNSRBL
	Allow multiple macro, dnsrbl, urlcheck, body and header clauses in ACL
3.1.1
	Fix crashes during dump reloads (AIDA Shinra)
	Fix DoS in MX sync protocol (AIDA Shinra)
	Check for -lc_r before others, for FreeBSD (AIDA Shinra)
	Fix configure for libspf2 (AIDA Shinra)
	Fix FreeBSD build (AIDA Shinra)
	Avoid buffer overflow in DNSRBL code (AIDA Shinra)
	Fix build problem with newer BerkeleyDB (AIDA Shinra)
	Check if -lbind requires -lpthread, for Linux
	Correctly enable non blocking I/O fox MX sync (Attila Bruncsak)
	Pointer to DRAC documentation (Matthias Scheler)
	FreeBSD build fixes (Hajimu UMEMOTO)
	Remove the /tmp/access-list.debug for security sake (AIDA Shinra)
	Fix display bug in log messages (AIDA Shinra)